--- a/2023-2024.md
+++ b/2023-2024.md
@@ -33,7 +33,7 @@
 |Week of Mar 4        |                      |              |          |   |
 |Week of Mar 11       |                      |              |          |   |
 |Week of Mar 18       |                      |              |          |   |
-|Week of Mar 25       |                      | Yuhan Zhao |          |   |
+|Week of Mar 25       |                      | Yuhan Zhao | [Stackelberg game-theoretic trajectory guidance with koopman operator](https://drive.google.com/file/d/1i6ZdI587vpsLEeVBY6Uz8z1Qe9zyCfzE/view?usp=sharing) |   |
 |Week of Apr 1        |                      |              |          |   |
 |Week of Apr 8        |                      |              |          |   |
 |Week of Apr 15       |                      |              |          |   |
